--- a/style.css
+++ b/style.css
@@ -27,19 +27,23 @@ p{
 }
 
 a{
-    font-family: 'Fuggles', cursive;
-font-family: 'Raleway', sans-serif;
-font-family: 'Roboto Condensed', sans-serif;
+   font-family: 'Fuggles', cursive;
+   font-family: 'Raleway', sans-serif;
+   font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Trade Winds', cursive;
     color: rgb(224, 223, 223);
     background-color: rgb(93, 56, 145);
+    font-size: 26px;
 }
 a:hover {
     
     font-family: 'Fuggles', cursive;
     font-family: 'Raleway', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Trade Winds', cursive;
     color: rgb(232, 226, 226);
     background-color: rgb(249, 148, 23);
+    font-size: 26px;
   }
 
 img {
@@ -82,5 +86,16 @@ text-align: center;
  .card-cv-color{
    color: rgb(232, 226, 226);
  }
-
+.font-claw{
+    font-family: 'Fuggles', cursive;
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Trade Winds', cursive;
+}
+.card-allign{
+    position: relative;
+    left: 30px;
+    top: 50px;
+    
+}
  
