--- a/style.css
+++ b/style.css
@@ -11,9 +11,17 @@ body{
 }
 h1{
     font-family: 'Fuggles', cursive;
-font-family: 'Raleway', sans-serif;
-font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
+h2{
+    font-family: 'Fuggles', cursive;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+
+}
+
+
 h5{
     font-family: 'Fuggles', cursive;
     font-family: 'Raleway', sans-serif;
@@ -94,8 +102,15 @@ font-family: 'Trade Winds', cursive;
 }
 .card-allign{
     position: relative;
-    left: 30px;
-    top: 50px;
     
+    top: 50px; 
+}
+.button-font-color{
+    font-family: 'Fuggles', cursive;
+font-family: 'Raleway', sans-serif;
+font-family: 'Roboto Condensed', sans-serif;
+font-family: 'Trade Winds', cursive;
+
+
 }
  
