--- a/style.css
+++ b/style.css
@@ -39,18 +39,17 @@ a{
    font-family: 'Raleway', sans-serif;
    font-family: 'Roboto Condensed', sans-serif;
    font-family: 'Trade Winds', cursive;
-   color: rgb(224, 223, 223);
-   background-color: rgb(93, 56, 145);
-   font-size: 26px;
+ 
 }
-.a-footer{
+
+.a-navbar{
     font-family: 'Fuggles', cursive;
     font-family: 'Raleway', sans-serif;
     font-family: 'Roboto Condensed', sans-serif;
     font-family: 'Trade Winds', cursive;
     color: rgb(224, 223, 223);
-    background-color: rgb(93, 56, 145);
-    font-size: 12px;
+    font-size: 16px;
+    
  }
 a:hover {
     
@@ -60,17 +59,9 @@ a:hover {
     font-family: 'Trade Winds', cursive;
     color: rgb(232, 226, 226);
     background-color: rgb(249, 148, 23);
-    font-size: 26px;
+    font-size: 20px;
   }
-a:hover(footer){
-    font-family: 'Fuggles', cursive;
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-family: 'Trade Winds', cursive;
-    color: rgb(232, 226, 226);
-    background-color: rgb(23, 249, 230);
-    font-size: 16px;
-}
+
 
 
 img {
@@ -150,3 +141,4 @@ font-family: 'Trade Winds', cursive;
     color: rgb(232, 226, 226);
 
 }
+
