--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html{
 }
 body{
    background-color: rgb(201, 201, 201);
-    font-size: 16px;
+    font-size: 12px;
 
 }
 h1{
@@ -60,7 +60,7 @@ a:hover {
     font-family: 'Trade Winds', cursive;
     color: rgb(232, 226, 226);
     background-color: rgb(249, 148, 23);
-    font-size: 10px;
+    font-size: 14px;
   }
 
 
@@ -123,6 +123,7 @@ font-family: 'Trade Winds', cursive;
 font-family: 'Raleway', sans-serif;
 font-family: 'Roboto Condensed', sans-serif;
 font-family: 'Trade Winds', cursive;
+font-size: 13px;
 }
 .carousel-height{
     width: 570px; 
@@ -145,4 +146,13 @@ font-family: 'Trade Winds', cursive;
     color: rgb(201, 201, 201);
 
 }
-
+.p-position{
+    position: relative;
+    top: 150px;
+}
+.font-cv{
+    font-family: 'Fuggles', cursive;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
+    
+}
